--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,4 +20,28 @@ body {
   color: linear-gradient(45deg, #fff3ff, #fffaec);
   background: 
     linear-gradient(45deg, #fff3ff, #fffaec);
+
 }
+
+@media (max-width: 1000px) {
+  #main__content {
+    left: calc(100% / 6); /* 1/6 of the container width from the left */
+    right: calc(100% / 6); /* 1/6 of the container width from the right */
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  button {
+    font-size: 1rem;
+  }
+}
+
